--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Genexia Laboratuvar ve Araştırma Ürünleri - Bilimin İhtiyacı Olan Her Şey</title>
-            <link rel="stylesheet" href="styles.css?v=2.2">
+            <link rel="stylesheet" href="styles.css?v=3.0">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -433,7 +433,7 @@
                     <div class="contact-info-footer">
                         <p><i class="fas fa-phone"></i> +90 531 910 12 77</p>
                         <p><i class="fas fa-envelope"></i> info@genexialab.com</p>
-                        <p><i class="fab fa-instagram"></i> @genexia.lab</p>
+                        <p><i class="fab fa-instagram"></i> <a href="https://www.instagram.com/genexia.lab" target="_blank" style="color: inherit; text-decoration: none;">@genexia.lab</a></p>
                     </div>
                 </div>
             </div>
