Mobil versiyon bozuklukları düzeltildi - Footer logo boyutu optimize edildi - Hero section responsive iyileştirildi - Grid düzenleri mobil için optimize edildi

--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <div class="footer-logo">
+                    <div class=",-logo">
                         <a href="#home" onclick="document.getElementById('home').scrollIntoView({behavior: 'smooth'}); return false;">
                             <img src="genexia-logo.png" alt="Genexia Logo" class="logo">
                         </a>
