Bizimle İletişime Geçin butonu maile bağlandı

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <p class="hero-subtitle">Genexia Laboratuvar ve Araştırma Ürünleri olarak, akademik dünyadan endüstriyel Ar-Ge projelerine kadar geniş bir yelpazede laboratuvar ihtiyaçlarını karşılayan, güvenilir ve yenilikçi bir tedarikçiyiz.</p>
                 <div class="hero-buttons">
                     <a href="#products" class="btn btn-primary" onclick="smoothScrollTo('products'); return false;">Ürünlerimizi Keşfedin</a>
-                    <a href="#contact" class="btn btn-secondary" onclick="smoothScrollTo('contact'); return false;">Bizimle İletişime Geçin</a>
+                    <a href="mailto:info@genexialab.com" class="btn btn-secondary">Bizimle İletişime Geçin</a>
                 </div>
             </div>
         </div>
