Kutu ikonu Genexia logosu ile değiştirildi

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
             <div class="why-choose-grid">
                 <div class="why-choose-item">
                     <div class="why-choose-icon">
-                        <i class="fas fa-boxes"></i>
+                        <img src="genexia-logo.png" alt="Genexia Logo" style="width: 60px; height: 60px; object-fit: contain;">
                     </div>
                     <h3>Kapsamlı Ürün Yelpazesi</h3>
                     <p>Laboratuvar ihtiyaçlarınıza yönelik geniş ve güncel ürün çeşitliliğimizle, her araştırma ve projeye uygun çözümler sunuyoruz.</p>
