Browser sekmesi favicon'u Genexia logosu ile değiştirildi

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <link rel="icon" href="favicon-64x64.png">
+    <link rel="icon" href="genexia-logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Genexia Laboratuvar ve Araştırma Ürünleri - Bilimin İhtiyacı Olan Her Şey</title>
