Metin güncelleme: 'Sizi tercih etmemiz...' -> 'Bizi tercih etmeniz...'

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
     <section id="why-choose-us" class="why-choose-us">
         <div class="container">
             <h2 class="section-title text-center">Neden Genexia?</h2>
-            <p class="section-subtitle text-center">Sizi tercih etmemiz için geçerli nedenler</p>
+            <p class="section-subtitle text-center">Bizi tercih etmeniz için geçerli nedenler</p>
             
             <div class="why-choose-grid">
                 <div class="why-choose-item">
