SEO: add favicon links; absolute OG/Twitter image; remove invalid Product schema

--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <link rel="icon" href="genexia-logo.png">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="icon" type="image/png" sizes="64x64" href="/favicon-64x64.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="manifest" href="/site.webmanifest">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Genexia Laboratuvar ve Araştırma Ürünleri - Bilimin İhtiyacı Olan Her Şey</title>
@@ -23,13 +28,13 @@
     <meta property="og:description" content="Laboratuvar ekipmanları, sarf malzemeleri, reaktifler ve cihazlar için güvenilir tedarikçi.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://genexialab.com">
-    <meta property="og:image" content="genexia-logo.png">
+    <meta property="og:image" content="https://genexialab.com/genexia-logo.png">
     
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Genexia Laboratuvar ve Araştırma Ürünleri">
     <meta name="twitter:description" content="Laboratuvar ekipmanları ve sarf malzemeleri için güvenilir tedarikçi.">
-    <meta name="twitter:image" content="genexia-logo.png">
+    <meta name="twitter:image" content="https://genexialab.com/genexia-logo.png">
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://genexialab.com">
@@ -59,41 +64,7 @@
         },
         "sameAs": [
             "https://www.instagram.com/genexia.lab"
-        ],
-        "hasOfferCatalog": {
-            "@type": "OfferCatalog",
-            "name": "Laboratuvar Ürünleri",
-            "itemListElement": [
-                {
-                    "@type": "Offer",
-                    "itemOffered": {
-                        "@type": "Product",
-                        "name": "Sarf Malzemeleri"
-                    }
-                },
-                {
-                    "@type": "Offer",
-                    "itemOffered": {
-                        "@type": "Product",
-                        "name": "Cam & Plastik Malzemeler"
-                    }
-                },
-                {
-                    "@type": "Offer",
-                    "itemOffered": {
-                        "@type": "Product",
-                        "name": "Laboratuvar Cihazları"
-                    }
-                },
-                {
-                    "@type": "Offer",
-                    "itemOffered": {
-                        "@type": "Product",
-                        "name": "Reaktifler ve Kitler"
-                    }
-                }
-            ]
-        }
+        ]
     }
     </script>
 </head>
