Add LinkedIn icon to footer social links and Schema.org

--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
             "addressCountry": "TR"
         },
         "sameAs": [
-            "https://www.instagram.com/genexia.lab"
+            "https://www.instagram.com/genexia.lab",
+            "https://www.linkedin.com/in/genexia-laboratuvar-ve-araştırma-ürünleri/"
         ]
     }
     </script>
@@ -462,6 +463,7 @@
                     <p>Genexia Laboratuvar ve Araştırma Ürünleri olarak, akademik dünyadan endüstriyel Ar-Ge projelerine kadar geniş bir yelpazede laboratuvar ihtiyaçlarını karşılayan, güvenilir ve yenilikçi bir tedarikçiyiz.</p>
                     <div class="social-links">
                         <a href="https://www.instagram.com/genexia.lab" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/genexia-laboratuvar-ve-araştırma-ürünleri/" target="_blank"><i class="fab fa-linkedin"></i></a>
                     </div>
                 </div>
                 
