Add LinkedIn to all contact sections (main contact and footer)

--- a/index.html
+++ b/index.html
@@ -421,6 +421,16 @@
                             <p><a href="https://www.instagram.com/genexia.lab" target="_blank" style="color: inherit; text-decoration: none;">@genexia.lab</a></p>
                         </div>
                     </div>
+                    
+                    <div class="contact-item">
+                        <div class="contact-icon">
+                            <i class="fab fa-linkedin"></i>
+                        </div>
+                        <div class="contact-details">
+                            <h3>LinkedIn</h3>
+                            <p><a href="https://www.linkedin.com/in/genexia-laboratuvar-ve-araştırma-ürünleri/" target="_blank" style="color: inherit; text-decoration: none;">Genexia Laboratuvar</a></p>
+                        </div>
+                    </div>
                 </div>
                 
                 <div class="contact-form">
@@ -496,6 +506,7 @@
                         <p><i class="fas fa-phone"></i> +90 531 910 12 77</p>
                         <p><i class="fas fa-envelope"></i> info@genexialab.com</p>
                         <p><i class="fab fa-instagram"></i> @genexia.lab</p>
+                        <p><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/genexia-laboratuvar-ve-araştırma-ürünleri/" target="_blank" style="color: inherit; text-decoration: none;">Genexia Laboratuvar</a></p>
                     </div>
                 </div>
             </div>
