Add new brands to the list with corrected spellings

--- a/index.html
+++ b/index.html
@@ -302,6 +302,14 @@
                     <span>Analytik Jena</span>
                     <span>Merck</span>
                     <span>Sartorius</span>
+                    <span>Canvax</span>
+                    <span>GLPBIO</span>
+                    <span>Abdos</span>
+                    <span>BT Lab</span>
+                    <span>Carlo Erba</span>
+                    <span>Sigma-Aldrich</span>
+                    <span>Carl Roth</span>
+                    <span>TCI</span>
                 </div>
             </div>
         </section>
