Update location to İstanbul/İçerenköy

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                             <i class="fas fa-map-marker-alt"></i>
                             <div>
                                 <h5>Konum</h5>
-                                <p>Türkiye</p>
+                                <p>İstanbul/İçerenköy</p>
                             </div>
                         </div>
 
