--- a/index.html
+++ b/index.html
@@ -326,7 +326,8 @@
                             <i class="fas fa-phone-alt"></i>
                             <div>
                                 <h5>Telefon</h5>
-                                <p>+90 531 910 12 77</p>
+                                <p><a href="tel:+905319101277" style="color: inherit; text-decoration: none;">+90 531
+                                        910 12 77</a></p>
                             </div>
                         </div>
                         <div class="info-item">
